--- a/index.html
+++ b/index.html
@@ -277,6 +277,15 @@ sudo apt-get install nfs-common
 <a id="ssh-keys" class="anchor" href="#ssh-keys" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>SSH keys</h1>
 
 <p>I followed: <a href="https://www.digitalocean.com/community/tutorials/how-to-set-up-ssh-keys--2">https://www.digitalocean.com/community/tutorials/how-to-set-up-ssh-keys--2</a></p>
+
+<h1>
+<a id="important" class="anchor" href="#important" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Important</h1>
+
+<p>Make sure you actually use a decent ssh client. For windows, I suggest mobaxterm. For mac, you already have a built-in client. </p>
+
+<p>You'll also want to learn a command line editor. I use vim, but others swear by emacs. At the very least try out nano.</p>
+
+<p>Once you get the hang of ssh, you can use it to also ftp files using sftp. Again, you'll want a decent client like mobaxterm or something else to copy files on and off.</p>
       </section>
       <footer>
         <p>Project maintained by <a href="https://github.com/Anderson-Lab">Anderson-Lab</a></p>
